[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[dependencies]
paste = "1.0"
anyhow = "1.0"
fancy-regex = "0.16"
geo = "0.32"
rayon = "1.11"
pathfinding = "4.14"
good_lp = { version = "1.14", default-features = false, features = ["microlp"] }


[profile.dev]
debug = false
opt-level = 3
